Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     </section>
 
     <section class="main-content">
-      <p><img alt=""></p><h3>
-<a id="fhryufi" class="anchor" href="#fhryufi" aria-hidden="true"><span class="octicon octicon-link"></span></a>fhryufi</h3>
+      <p><a href="http://komplat.ru/Cabinet">некунекнек</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/proton938/proton938.gihub.io">Proton938.gihub.io</a> is maintained by <a href="https://github.com/proton938">proton938</a>.</span>
